# uptools

./: .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  setup.py  update_version.py
test/: test_uptools.py
uptools/: __init__.py
