[tool.poetry]
name = "uptools"
version = "0.1.4"
description = ""
authors = ["Thomas Klijnsma <tklijnsm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uproot3 = "^3.14.4"
seutils = "^0.57"
uproot-methods = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88